@@ -1,3 +1,11 @@
+2005-02-15	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-cell-render-ellipsized-text.c
+	  (exo_cell_renderer_ellipsized_text_render): Make sure that the
+	  cell actually contains text (text string != NULL), because else
+	  the Pango extension code will dump core if libexo is built with
+	  --enable-final.
+
 2005-01-29	Benedikt Meurer <benny@xfce.org>
 
 	* po/de.po: Improved translations for the toolbar style menu.
